2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.2 and 2.1.1
	* VERSION: change the version to 2.1.2.

2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/properties.rb: disable statement caching by default.
	    This is workaround about a SIGSEGV issue.
	    See: https://github.com/rsim/oracle-enhanced/issues/162

2012-04-28  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: delete code which overwrites signal handlers
	    registered by ruby. This was committed by mistake.
	    See: http://rubyforge.org/forum/forum.php?thread_id=50690&forum_id=1078

2012-04-24  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/metadata.c: fix internal heap error in OCI.
	    (github issue #12 reported by Yasuo Honda)

2012-04-22  KUBO Takehiro  <kubo@jiubao.org>
	* VERSION: update to 2.1.1.
	* README.md: add links.

2012-04-22  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.1.0 and 2.1.1.
	* README -> README.md: renamed.
	* .yardopts: added for yard.
	* docs/install-binary-package.md, docs/report-installation-issue.md:
	    added.
	* docs/platform-specific-issues.md, lib/oci8/bindtype.rb, lib/oci8/connection_pool.rb
	  lib/oci8/object.rb, lib/oci8/properties.rb: fix documents.
	* ruby-oci8.gemspec, dist-files: fix for renamed and added files.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_datetime.rb: fix to pass tests on ruby 1.9.1 and earlier.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: fix to raise a RuntimeError when a connection
	    retrieved from a connection pool is set as non-blocking on 
	    ruby 1.8.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: OCI8::LOB#read() returns an empty string '' when
	    it is an empty lob.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* custom-rdoc.rb: delete an unused file.

2012-04-21  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_oci8.rb: fix code to test OCI8::CLOB.new(conn, '').
